# obelix

./: .gitignore  Makefile  leaderboard.csv  main.py  pyproject.toml  shit.sh
scores/: scores_13.txt  scores_16.txt  scores_17.txt  scores_18.txt  scores_19.txt  scores_2.txt  scores_20.txt  scores_21.txt  scores_22.txt  scores_23.txt  scores_24.txt  scores_25.txt  scores_26.txt  scores_27.txt  scores_28.txt  scores_29.txt  scores_3.txt  scores_30.txt  scores_31.txt  scores_32.txt  scores_33.txt  scores_34.txt  scores_35.txt  scores_36.txt  scores_37.txt  scores_38.txt  scores_39.txt  scores_40.txt  scores_41.txt  scores_42.txt  scores_43.txt  scores_44.txt  scores_45.txt  scores_46.txt  scores_47.txt  scores_48.txt  scores_50.txt  scores_51.txt  scores_52.txt  scores_53.txt  (+16 more)
src/: compute_observation_states.py  evaluate.py  main.py  sweeper.py
src/agents/: d3qn.py  ddqn.py  dyna_q.py  linUCB.py  ppo.py  sarsa_lambda.py  sarsa_lambda_infer.py
submissions/39.wqtl_4/: agent.py
submissions/4.slpa_1/: agent.py
submissions/40.es_nw_1/: weights.pth
submissions/41.es_nw_2/: weights.pth
submissions/42.es_nw_3/: weights.pth
submissions/43.es_nw_4/: weights.pth
submissions/44.es_1/: agent.py  weights.pth
submissions/45.es_2/: weights.pth
submissions/46.es_3/: weights.pth
submissions/47.es_4/: weights.pth
submissions/48.rf_p/: weights.pth
submissions/49.rf_np/: weights.pth
submissions/50.rfns_p/: agent.py  weights.pth
submissions/51.rfns_np/: weights.pth
submissions/52.dq_p/: agent.py  weights.pth
submissions/53.dq_np/: weights.pth
(+105 files in other folders)
